Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumberNumberField.quorum
class Main
    number v = Test()
    action Main
        if v = 5.0
            output "passed"
        end
    end

    action Test() returns number
        number var = 5.0
        return var
    end
end