Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberBooleanField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        boolean var = true
        return var
    end
end